--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "lint": "eslint --ext js,jsx src/",
     "lint:fix": "eslint --fix --ext js,jsx src/",
     "prettier": "prettier --check \"src/**/(*.jsx|*.js|*.css|*.scss)\"",
-    "prettier:fix": "prettier --write \"src/**/(*.jsx|*.js|*.css|*.scss)\""
+    "prettier:fix": "prettier --write \"src/**/(*.jsx|*.js|*.css|*.scss)\"",
+    "prepare": "husky"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -27,6 +32,7 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "husky": "^9.0.11",
     "path": "^0.12.7",
     "prettier": "^3.3.2",
     "vite": "^5.2.0"
